--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,17 @@ board = esp32doit-devkit-v1
 framework = arduino
 lib_deps = pablomarquez76/PS4_Controller_Host@^1.0.6
 monitor_speed = 115200
+
+[env:esp32-c3-devkitm-1]
+platform = espressif32
+board = esp32-c3-devkitm-1
+framework = arduino
+lib_deps = pablomarquez76/PS4_Controller_Host@^1.0.6
+monitor_speed = 115200
+
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
+framework = arduino
+lib_deps = pablomarquez76/PS4_Controller_Host@^1.0.6
+monitor_speed = 115200
